<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">DealGapIQ</string>
    <string name="title_activity_main">DealGapIQ</string>
    <string name="package_name">com.dealgapiq.mobile</string>
    <string name="custom_url_scheme">dealgapiq</string>
</resources>

